--- a/PrjPLANTDISEASE.ipynb
+++ b/PrjPLANTDISEASE.ipynb
@@ -6,7 +6,6 @@
       "name": "PrjPLANTDISEASE.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNSY59dpclIAVMmAnGPYLt5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,13 +60,43 @@
       "metadata": {
         "id": "fNnf2Xyoh-dw",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "127a0d2a-5df5-43ce-f216-803ed15248b3"
       },
       "source": [
-        "\n"
+        "\n",
+        "import numpy as np\n",
+        "import pickle\n",
+        "import cv2\n",
+        "from os import listdir\n",
+        "from sklearn.preprocessing import LabelBinarizer\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers.normalization import BatchNormalization\n",
+        "from keras.layers.convolutional import Conv2D\n",
+        "from keras.layers.convolutional import MaxPooling2D\n",
+        "from keras.layers.core import Activation, Flatten, Dropout, Dense\n",
+        "from keras import backend as K\n",
+        "from keras.preprocessing.image import ImageDataGenerator\n",
+        "from keras.optimizers import Adam\n",
+        "from keras.preprocessing import image\n",
+        "from keras.preprocessing.image import img_to_array\n",
+        "from sklearn.preprocessing import MultiLabelBinarizer\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     }
   ]
 }
