--- a/PrjPLANTDISEASE.ipynb
+++ b/PrjPLANTDISEASE.ipynb
@@ -87,7 +87,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,6 +97,28 @@
           "name": "stderr"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5XqAZPxmDPAd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "EPOCHS = 25\n",
+        "INIT_LR = 1e-3\n",
+        "BS = 32\n",
+        "default_image_size = tuple((256, 256))\n",
+        "image_size = 0\n",
+        "directory_root = '../input/plantvillage/'\n",
+        "width=256\n",
+        "height=256\n",
+        "depth=3"
+      ],
+      "execution_count": 3,
+      "outputs": []
     }
   ]
 }
