--- a/PrjPLANTDISEASE.ipynb
+++ b/PrjPLANTDISEASE.ipynb
@@ -117,7 +117,30 @@
         "height=256\n",
         "depth=3"
       ],
-      "execution_count": 3,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1ro_fGlrGG4T",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def convert_image_to_array(image_dir):\n",
+        "    try:\n",
+        "        image = cv2.imread(image_dir)\n",
+        "        if image is not None :\n",
+        "            image = cv2.resize(image, default_image_size)   \n",
+        "            return img_to_array(image)\n",
+        "        else :\n",
+        "            return np.array([])\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error : {e}\")\n",
+        "        return None"
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
