Loading Data Into File ( Sanheen )

--- a/PrjPLANTDISEASE.ipynb
+++ b/PrjPLANTDISEASE.ipynb
@@ -33,13 +33,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "500f1261-2e08-479e-8e0d-f681a78ae563"
+        "outputId": "f32d6afc-73fa-4a74-d7ca-6af23f5fcaea"
       },
       "source": [
         "#Downloading Dataset\n",
         "!git clone https://github.com/spMohanty/PlantVillage-Dataset.git"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -47,7 +47,7 @@
             "Cloning into 'PlantVillage-Dataset'...\n",
             "remote: Enumerating objects: 163229, done.\u001b[K\n",
             "remote: Total 163229 (delta 0), reused 0 (delta 0), pack-reused 163229\u001b[K\n",
-            "Receiving objects: 100% (163229/163229), 2.00 GiB | 16.29 MiB/s, done.\n",
+            "Receiving objects: 100% (163229/163229), 2.00 GiB | 35.87 MiB/s, done.\n",
             "Resolving deltas: 100% (99/99), done.\n",
             "Checking out files: 100% (182401/182401), done.\n"
           ],
@@ -58,13 +58,27 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "QgblK6snrEtv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Copy Main Data to Root Folder (FolderView mae Dekhne ke liye)\n",
+        "!cp -R /content/PlantVillage-Dataset/raw /content/"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "fNnf2Xyoh-dw",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "127a0d2a-5df5-43ce-f216-803ed15248b3"
+        "outputId": "65294208-9176-47ea-c9cf-45922ff9055c"
       },
       "source": [
         "\n",
@@ -87,7 +101,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,18 +120,18 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "#Jo B Information Chahiye , Readme.md Mae likh Dena\n",
         "EPOCHS = 25\n",
         "INIT_LR = 1e-3\n",
         "BS = 32\n",
         "default_image_size = tuple((256, 256))\n",
         "image_size = 0\n",
-        "directory_root = '../input/plantvillage/'\n",
+        "directory_root = '/content/raw/color'\n",
         "width=256\n",
         "height=256\n",
         "depth=3"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
