comment change to initialization

--- a/PrjPLANTDISEASE.ipynb
+++ b/PrjPLANTDISEASE.ipynb
@@ -120,7 +120,7 @@
         "colab": {}
       },
       "source": [
-        "#Jo B Information Chahiye , Readme.md Mae likh Dena\n",
+        "#initialization\n",
         "EPOCHS = 25\n",
         "INIT_LR = 1e-3\n",
         "BS = 32\n",
