--- a/PrjPLANTDISEASE.ipynb
+++ b/PrjPLANTDISEASE.ipynb
@@ -544,19 +544,19 @@
         "\n",
         "model = Sequential()\n",
         "model.add(Conv2D(32, (3, 3),activation='relu',input_shape=(150,150,3)))\n",
-        "model.add(BatchNormalization(axis=chanDim))\n",
+        "model.add(BatchNormalization())\n",
         "model.add(MaxPooling2D(strides=(3, 3)))\n",
         "model.add(Dropout(0.25))\n",
-        "model.add(Conv2D(32, (3, 3),activation='relu' ,input_shape=(150,150,3)))\n",
-        "model.add(BatchNormalization(axis=chanDim))\n",
+        "model.add(Conv2D(32, (3, 3),activation='relu' ))\n",
+        "model.add(BatchNormalization())\n",
         "model.add(MaxPooling2D(strides=(3, 3)))\n",
         "model.add(Dropout(0.5))\n",
-        "model.add(Conv2D(64, (3, 3),activation='relu' ,input_shape=(150,150,3)))\n",
-        "model.add(BatchNormalization(axis=chanDim))\n",
+        "model.add(Conv2D(64, (3, 3),activation='relu' ))\n",
+        "model.add(BatchNormalization())\n",
         "model.add(MaxPooling2D(strides=(3, 3)))\n",
         "model.add(Dropout(0.4))\n",
-        "model.add(Conv2D(64, (3, 3),activation='relu',input_shape=(150,150,3)))\n",
-        "model.add(BatchNormalization(axis=chanDim))\n",
+        "model.add(Conv2D(64, (3, 3),activation='relu',))\n",
+        "model.add(BatchNormalization())\n",
         "model.add(MaxPooling2D(strides=(3, 3)))\n",
         "model.add(Dropout(0.3))\n",
         "\n",
@@ -567,7 +567,7 @@
         "\n",
         "model.add(Dense(7,activation=\"softmax\"))"
       ],
-      "execution_count": 48,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -579,61 +579,61 @@
           "base_uri": "https://localhost:8080/",
           "height": 867
         },
-        "outputId": "c4044859-33c5-41f8-8d96-819f463b0dd6"
+        "outputId": "e0654844-7653-4cd2-a950-c9e7ae76cd6b"
       },
       "source": [
         "model.summary()"
       ],
-      "execution_count": 49,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_7\"\n",
+            "Model: \"sequential_9\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d_21 (Conv2D)           (None, 148, 148, 32)      896       \n",
+            "conv2d_29 (Conv2D)           (None, 148, 148, 32)      896       \n",
             "_________________________________________________________________\n",
-            "batch_normalization_21 (Batc (None, 148, 148, 32)      128       \n",
+            "batch_normalization_29 (Batc (None, 148, 148, 32)      128       \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_17 (MaxPooling (None, 49, 49, 32)        0         \n",
+            "max_pooling2d_25 (MaxPooling (None, 49, 49, 32)        0         \n",
             "_________________________________________________________________\n",
-            "dropout_17 (Dropout)         (None, 49, 49, 32)        0         \n",
+            "dropout_27 (Dropout)         (None, 49, 49, 32)        0         \n",
             "_________________________________________________________________\n",
-            "conv2d_22 (Conv2D)           (None, 47, 47, 32)        9248      \n",
+            "conv2d_30 (Conv2D)           (None, 47, 47, 32)        9248      \n",
             "_________________________________________________________________\n",
-            "batch_normalization_22 (Batc (None, 47, 47, 32)        128       \n",
+            "batch_normalization_30 (Batc (None, 47, 47, 32)        128       \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_18 (MaxPooling (None, 16, 16, 32)        0         \n",
+            "max_pooling2d_26 (MaxPooling (None, 16, 16, 32)        0         \n",
             "_________________________________________________________________\n",
-            "dropout_18 (Dropout)         (None, 16, 16, 32)        0         \n",
+            "dropout_28 (Dropout)         (None, 16, 16, 32)        0         \n",
             "_________________________________________________________________\n",
-            "conv2d_23 (Conv2D)           (None, 14, 14, 64)        18496     \n",
+            "conv2d_31 (Conv2D)           (None, 14, 14, 64)        18496     \n",
             "_________________________________________________________________\n",
-            "batch_normalization_23 (Batc (None, 14, 14, 64)        256       \n",
+            "batch_normalization_31 (Batc (None, 14, 14, 64)        256       \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_19 (MaxPooling (None, 5, 5, 64)          0         \n",
+            "max_pooling2d_27 (MaxPooling (None, 5, 5, 64)          0         \n",
             "_________________________________________________________________\n",
-            "dropout_19 (Dropout)         (None, 5, 5, 64)          0         \n",
+            "dropout_29 (Dropout)         (None, 5, 5, 64)          0         \n",
             "_________________________________________________________________\n",
-            "conv2d_24 (Conv2D)           (None, 3, 3, 64)          36928     \n",
+            "conv2d_32 (Conv2D)           (None, 3, 3, 64)          36928     \n",
             "_________________________________________________________________\n",
-            "batch_normalization_24 (Batc (None, 3, 3, 64)          256       \n",
+            "batch_normalization_32 (Batc (None, 3, 3, 64)          256       \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_20 (MaxPooling (None, 1, 1, 64)          0         \n",
+            "max_pooling2d_28 (MaxPooling (None, 1, 1, 64)          0         \n",
             "_________________________________________________________________\n",
-            "dropout_20 (Dropout)         (None, 1, 1, 64)          0         \n",
+            "dropout_30 (Dropout)         (None, 1, 1, 64)          0         \n",
             "_________________________________________________________________\n",
-            "flatten_5 (Flatten)          (None, 64)                0         \n",
+            "flatten_7 (Flatten)          (None, 64)                0         \n",
             "_________________________________________________________________\n",
-            "dense_7 (Dense)              (None, 512)               33280     \n",
+            "dense_13 (Dense)             (None, 512)               33280     \n",
             "_________________________________________________________________\n",
-            "dense_8 (Dense)              (None, 128)               65664     \n",
+            "dense_14 (Dense)             (None, 128)               65664     \n",
             "_________________________________________________________________\n",
-            "dropout_21 (Dropout)         (None, 128)               0         \n",
+            "dropout_31 (Dropout)         (None, 128)               0         \n",
             "_________________________________________________________________\n",
-            "dense_9 (Dense)              (None, 7)                 903       \n",
+            "dense_15 (Dense)             (None, 7)                 903       \n",
             "=================================================================\n",
             "Total params: 166,183\n",
             "Trainable params: 165,799\n",
@@ -654,7 +654,7 @@
       "source": [
         "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
       ],
-      "execution_count": 50,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -666,7 +666,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 357
         },
-        "outputId": "e0d0dba4-9a76-4672-c74f-f8327eefc081"
+        "outputId": "fe42b7f6-86ac-45cc-8d9e-b6a393cae2b9"
       },
       "source": [
         "model_fit=model.fit(trainGenerator,\n",
@@ -674,7 +674,7 @@
         "                    epochs=30,\n",
         "                    validation_data=validGenerator)"
       ],
-      "execution_count": 54,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +690,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-54-d1f2c0ea23d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m                     \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                     \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                     validation_data=validGenerator)\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-62-d1f2c0ea23d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m                     \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                     \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                     validation_data=validGenerator)\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[1;32m   1145\u001b[0m                 \u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1146\u001b[0m                 \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1147\u001b[0;31m                 initial_epoch=initial_epoch)\n\u001b[0m\u001b[1;32m   1148\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1149\u001b[0m         \u001b[0;31m# Case 2: Symbolic tensors or Numpy array-like.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     89\u001b[0m                 warnings.warn('Update your `' + object_name + '` call to the ' +\n\u001b[1;32m     90\u001b[0m                               'Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 91\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit_generator\u001b[0;34m(self, generator, steps_per_epoch, epochs, verbose, callbacks, validation_data, validation_steps, validation_freq, class_weight, max_queue_size, workers, use_multiprocessing, shuffle, initial_epoch)\u001b[0m\n\u001b[1;32m   1730\u001b[0m             \u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muse_multiprocessing\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1731\u001b[0m             \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1732\u001b[0;31m             initial_epoch=initial_epoch)\n\u001b[0m\u001b[1;32m   1733\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1734\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0minterfaces\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegacy_generator_methods_support\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -698,7 +698,7 @@
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mtrain_on_batch\u001b[0;34m(self, x, y, sample_weight, class_weight, reset_metrics)\u001b[0m\n\u001b[1;32m   1506\u001b[0m             \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1507\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1508\u001b[0;31m             class_weight=class_weight)\n\u001b[0m\u001b[1;32m   1509\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_uses_dynamic_learning_phase\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1510\u001b[0m             \u001b[0mins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msample_weights\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[0;34m(self, x, y, sample_weight, class_weight, check_array_lengths, batch_size)\u001b[0m\n\u001b[1;32m    577\u001b[0m             \u001b[0mfeed_input_shapes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    578\u001b[0m             \u001b[0mcheck_batch_axis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# Don't enforce the batch size.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 579\u001b[0;31m             exception_prefix='input')\n\u001b[0m\u001b[1;32m    580\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    581\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training_utils.py\u001b[0m in \u001b[0;36mstandardize_input_data\u001b[0;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[1;32m    143\u001b[0m                             \u001b[0;34m': expected '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' to have shape '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m                             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' but got array with shape '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 145\u001b[0;31m                             str(data_shape))\n\u001b[0m\u001b[1;32m    146\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Error when checking input: expected conv2d_21_input to have shape (150, 150, 3) but got array with shape (256, 256, 3)"
+            "\u001b[0;31mValueError\u001b[0m: Error when checking input: expected conv2d_29_input to have shape (150, 150, 3) but got array with shape (256, 256, 3)"
           ]
         }
       ]
