--- a/VisulizeFilters.ipynb
+++ b/VisulizeFilters.ipynb
@@ -40,7 +40,7 @@
         " #Downloading Dataset\n",
         "!git clone https://github.com/spMohanty/PlantVillage-Dataset"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,7 +67,7 @@
         " #copy the data\n",
         "!cp -R /content/PlantVillage-Dataset/raw /content/"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
         " #for removing any folder\n",
         "!rm -r /content/Test"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
         "    des = '/content/Test/'\n",
         "    shutil.move(src,des)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -184,7 +184,7 @@
         "height=256\n",
         "depth=3"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +202,7 @@
         " root_dir = listdir(directory_root)\n",
         "print(\"Number Of Folders : \" + str(len(root_dir)))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +223,7 @@
       "source": [
         " !mkdir Test"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +238,7 @@
         "    f = open(\"TestFile.csv\",\"a+\")\n",
         "    f.write(ClassName+\"@#\"+ImageName+\"\\n\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -257,7 +257,7 @@
         "    print(i)\n",
         "    TestFileFolderCreate()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +331,7 @@
         "plt.title(\"Number Of Images in every folder\")\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +368,7 @@
         "    height_shift_range=0.1, shear_range=0.2, \n",
         "    zoom_range=0.5,horizontal_flip=True,fill_mode=\"nearest\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -394,7 +394,7 @@
         "#scroll krte jao\n",
         "classes = trainGenerator.class_indices"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
         "        f.write(str(j)+\"@#\"+i+\"\\n\")\n",
         "        j = j+1"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +434,7 @@
       "source": [
         " ClassesLabel(classes)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -457,7 +457,7 @@
         "        shuffle=True,\n",
         "        subset='validation')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +482,7 @@
       "source": [
         ""
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -509,7 +509,7 @@
         "outputId": "292fa7bf-520f-4fec-db16-2b1d0e098485"
       },
       "source": [
-        " #ye aapko dekhayega images , validation ke liye /jo testing ke liye images jayegi kis prakarnHai vo , random images dekhayega\n",
+        " #ye aapko dekhayega images , validation ke liye ya jo testing ke liye images jayegi kis prakar Hai vo , random images dekhayega\n",
         " #scroll thoda saboutput aane vala. isme hmne random function to use nai kiya , nhi trainGenerator dekho likja hua , trainGe\n",
         "for i in range(9):\n",
         "    plt.subplot(3,3,i+1) \n",
@@ -523,7 +523,7 @@
         "plt.tight_layout()\n",
         "plt.show()\n",
         "\n",
-        "#ye jo umages hai , 10480 mae se random 9bimages dekhai isne. testing mae jo use krega ye\n",
+        "#ye jo images hai , 10480 mae se random 9bimages dekhai isne. testing mae jo use krega ye\n",
         "#vo images hai\n",
         "\n",
         "#ye images yraninh ke liye jayegi algoritm nae , lehle vali jo dekhai\n",
@@ -534,7 +534,7 @@
         "# in inages ko dhyan Se dekho , 2nd row 3rd image dekho , vha aapko kuch dekhega\n",
         "# ?? hnji ye jo ese image hui ImageDataGeneraotr ke krn huk , aage dekhenge ye kesenhui scroll kro aage."
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -607,7 +607,7 @@
         "        i += 1\n",
         "    plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -628,7 +628,7 @@
         "imgPath = f\"/content/Test/{ImageFiles[randomNum]}\"\n",
         "#is code se bs koi b random image utahi Test Folder se okay ?okk"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -642,7 +642,7 @@
         " from keras.preprocessing.image import load_img\n",
         "import os"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -655,7 +655,7 @@
       "source": [
         " orig_img = image.load_img(imgPath) #scroll"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -682,7 +682,7 @@
         "\n",
         "## smj aaya , ? hnji ne "
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -716,7 +716,7 @@
         "#ye snj aaya ?hn ji in images kobdhyan se dekho , isme b kines aa\n",
         "# ise fill_mode=\"nearest \" kehte hai #aage pta chlega ye kya hita. next !hnji ch lo."
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -747,7 +747,7 @@
         "  datagen = ImageDataGenerator(width_shift_range=0.5)\n",
         "generate_plot_pics(datagen,orig_img)#ye 0.2 ko change krke ruk kro , apne mun se number dalo ese "
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -781,7 +781,7 @@
         "  generate_plot_pics(datagen,orig_img)\n",
         "  #aagya smj ?hnji next "
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -816,7 +816,7 @@
         "#constant- ntlb  shift kra na 0m5 se to shift krne pr jo extra space thi use fill nhi krega khali chord dega \n",
         "#nearest (by default) isme krta hai , name se clear hai nearest , mtlb jo space khali bchi uske aas paas jo color hoga usi kenpixels ko bhr dega ."
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -862,7 +862,7 @@
         "#shear range ek drwaja smjho jisko aadha khola or door se dekh rhe ho , to vo slant dekhai deta teda sa..\n",
         "#yhi kaam isem ho rha but hmari nazar mae aa nj ra bhtt thoda hai "
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -893,7 +893,7 @@
         "  datagen = ImageDataGenerator(horizontal_flip=True)\n",
         "generate_plot_pics(datagen,orig_img)#bs flip krdiya ise ,left to right right ko left "
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -936,7 +936,7 @@
         "#0.81 * 0.324 = ye krna conputer ke loye bhtt aasan hoga bhtt fas th nkjri  dhnjii\n",
         "#mext\n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -967,7 +967,7 @@
         "datagen = ImageDataGenerator(rotation_range=25,horizontal_flip=True,fill_mode=\"nearest\",shear_range=0.2,zoom_range=0.3,width_shift_range=0.1,height_shift_range=0.1,rescale=1./255,vertical_flip=True)\n",
         "generate_plot_pics(datagen,orig_img) #yha sb mix kridya scroll krke Dekho "
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -996,7 +996,7 @@
         "#hmari jo image hai , leave ki uske sath kya krra ye algotihm\n",
         "#ye dekhenge ab hum , as image visulization okayyyyyyyyyyyyyyyyyyyy!"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1015,7 +1015,7 @@
         "n_classes = 38\n",
         "from keras.regularizers import l2"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1057,7 +1057,7 @@
         "model.add(Dense(n_classes))\n",
         "model.add(Activation(\"softmax\"))"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1075,7 +1075,7 @@
         "model.summary()\n",
         "#nicheb kor"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1175,7 +1175,7 @@
         "    print(layer.name, filters.shape)\n",
         "    # 5 CNN layer hai , vaki activation function , pooling , batch kormalization hai."
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,7 +1279,7 @@
         "# ise temperoary dyan mae rkho , abhi dekhata ye random generated hote hhnnn ji \n",
         "# ab dekho kya higa , niche krna simmi isse niche vala code chlao"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
