change in comments

--- a/VisulizeFilters.ipynb
+++ b/VisulizeFilters.ipynb
@@ -515,7 +515,7 @@
         "    plt.subplot(3,3,i+1) \n",
         "    for x,y in trainGenerator: #ye jo yha likha hai , isme jo image sbse pehle aayegi vo dekhayega , print krega 9 images ko  random isliye Hya kuki , upar \n",
         "    #jb hmne trainGenerator bnata tha , vha bich mae dala tha shuffle = True\n",
-        "    #aagya smn ?hnn scroll show output\n",
+        "  \n",
         "        plt.imshow((x[0]/255)) \n",
         "        #plt.title('y={}'.format(y[0]))\n",
         "        plt.axis('off')\n",
@@ -526,13 +526,11 @@
         "#ye jo images hai , 10480 mae se random 9bimages dekhai isne. testing mae jo use krega ye\n",
         "#vo images hai\n",
         "\n",
-        "#ye images yraninh ke liye jayegi algoritm nae , lehle vali jo dekhai\n",
+        "#ye images traning ke liye jayegi algoritm nae , pehle vali jo dekhai\n",
         "#vo testing / validation vali images dekhai thi...\n",
-        "#agar trainGenerator ki jgh validGenerator likhoge z to validation ki images dekhayega\n",
-        "#aage bdo\n",
-        "#wait for a sec \n",
-        "# in inages ko dhyan Se dekho , 2nd row 3rd image dekho , vha aapko kuch dekhega\n",
-        "# ?? hnji ye jo ese image hui ImageDataGeneraotr ke krn huk , aage dekhenge ye kesenhui scroll kro aage."
+        "#agar trainGenerator ki jgh validGenerator likhoge jo to validation ki images dekhayega\n",
+        "# in inages ko dhyan Se dekho , 2nd row 3rd image dekho , vha  kuch dekhega\n",
+        "#  ye jo ese image hui ImageDataGeneraotr ke krn huk , aage dekhenge ye kesenhui scroll kro aage."
       ],
       "execution_count": null,
       "outputs": [
@@ -621,12 +619,12 @@
         " #ab main start hua ImageDataGemerator  ko smjhne ka syste\n",
         " #mne koi b 1 file utali picture utali Test Folder mae se\n",
         " #vhi random ka use krke, dekho , ye to agya ki apne test vali file ti usme se uthay kya krna mene\n",
-        " #Tes folder mae se image utgai , usko hum ImageDataGenerator ke sath jodenge , ki kya ho rha \n",
-        "# kya frk pdta hai jub hum imagedatageneratir use krte hai  ,  or ye abhi sirf 1 image pr krke dekhayega.okk\n",
+        " #Test folder mae se image uthai , usko hum ImageDataGenerator ke sath jodenge , ki kya ho rha \n",
+        "# kya frk pdta hai jub hum imagedatagenerator use krte hai  ,  or ye abhi sirf 1 image pr krke dekhayega.okk\n",
         "ImageFiles = listdir('/content/Test/')\n",
         "randomNum = random.randint(0,len(ImageFiles))\n",
         "imgPath = f\"/content/Test/{ImageFiles[randomNum]}\"\n",
-        "#is code se bs koi b random image utahi Test Folder se okay ?okk"
+        "#is code se bs koi b random image utahi Test Folder se"
       ],
       "execution_count": null,
       "outputs": []
@@ -653,7 +651,7 @@
         "colab": {}
       },
       "source": [
-        " orig_img = image.load_img(imgPath) #scroll"
+        " orig_img = image.load_img(imgPath)"
       ],
       "execution_count": null,
       "outputs": []
@@ -675,12 +673,10 @@
         " #vrna hum address dalte copy krte image ka address tike lg jata.  , to random krdia \n",
         "\n",
         "# hum ij images kon save kr dete hai ese changes krke\n",
-        "# and jese hum ye singke image ka dekhare , abhi 1 hi chin kri rotatiom , aagr dekhna bhtt sari chije ikhati hogi , to vo sari ikhati hokr ek image bnayegi\n",
+        "# and jese hum ye single image ka dekhare , abhi 1 hi change kri rotatiom , aagr dekhna bhtt sari chije ikhati hogi , to vo sari ikhati hokr ek image bnayegi\n",
         "#fr usko traning ke liye bhejte hai , jese ye mne to yha o images dekhai hai na , lekin jb bhtt sari chije krte , to\n",
         "# 1 hi image jati hai ! traning ke liye.\n",
-        "generate_plot_pics(datagen,orig_img)\n",
-        "\n",
-        "## smj aaya , ? hnji ne "
+        "generate_plot_pics(datagen,orig_img)\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -712,9 +708,9 @@
       "source": [
         "  datagen = ImageDataGenerator(zoom_range=.5)\n",
         "generate_plot_pics(datagen,orig_img) #yha dhyan se dekho jo zoom out vale hai , jese canter vali image \n",
-        "#aap log call pr ho kua ? nye mouse scroll krre na , muje esa lga jese ek dusrenko bta re , sry sry \n",
-        "#ye snj aaya ?hn ji in images kobdhyan se dekho , isme b kines aa\n",
-        "# ise fill_mode=\"nearest \" kehte hai #aage pta chlega ye kya hita. next !hnji ch lo."
+        "\n",
+        "# in images ko b dhyan se dekho , isme b kines aa\n",
+        "# ise fill_mode=\"nearest \" kehte hai #aage pta chlega ye kya hota. "
       ],
       "execution_count": null,
       "outputs": [
@@ -777,9 +773,9 @@
       "source": [
         "  datagen = ImageDataGenerator(height_shift_range=0.5)## isse b help hogi , dekho jub hum photo khichenge prediction ke\n",
         "  #liye to orignal image ke angle pr khade hokr thodi khichege hr bari , thodi image idar udar b ho skti photo mae\n",
-        "  # to isse hmara model ese ready hoga esi editing se kj kesi b image bhej do kisi b angle se ye predict krne ki koshish krenga avhe resukt dega.\n",
+        "  # to isse hmara model ese ready hoga esi editing se kj kesi b image bhej do kisi b angle se ye predict krne ki koshish krenga ache result dega.\n",
         "  generate_plot_pics(datagen,orig_img)\n",
-        "  #aagya smj ?hnji next "
+        "  "
       ],
       "execution_count": null,
       "outputs": [
@@ -809,8 +805,8 @@
         "outputId": "d84b1210-2cf3-4c55-a9c2-ec29cdb1621d"
       },
       "source": [
-        " datagen = ImageDataGenerator(height_shift_range=0.5,fill_mode=\"constant\")\n",
-        "generate_plot_pics(datagen,orig_img) # nearest ki cha krna mae name btata kya likhna, ye shift 0 5 krne ke baad jo extra space bchti hai na , usme fill krta hau\n",
+        " datagen = ImageDataGenerator(height_shift_range=0.5,fill_mode=\"nearest\")\n",
+        "generate_plot_pics(datagen,orig_img) # nearest ki jgha krna  name changes, ye shift 0 5 krne ke baad jo extra space bchti hai na , usme fill krta hau\n",
         "#refleclt- isme reflection daal dega sb , piche vala bcha to niche ki trf piche vala hissa hi reflect kr dega \n",
         "#wrap  - isme fill kra tha , agar upar vala hissa kata to vo niche ki trf ghusa dega , agar niche vala hissa ata to upar ki trf se ghusa dega ska \n",
         "#constant- ntlb  shift kra na 0m5 se to shift krne pr jo extra space thi use fill nhi krega khali chord dega \n",
@@ -926,15 +922,15 @@
         "#isme kuch b ni hota bs jo values 0 to 255 hoti usko 0 to 1 kr deta hai hr value ko 255 se divide kr\n",
         "#Deta hai , picture orignal hi ehti hai o, kjko orignal picture haj\n",
         "#uske pixles kibramge 0 to 255 hai , and jo baki hai sbki 0 to 1 ki range hai \n",
-        "#baki kuch alag nhi hai.ye btado ek bar ?\n",
+        "#baki kuch alag nhi hai.\n",
         "\n",
         "##ye values pta hai na , pixel value hoti ?hnji\n",
         "#to pixel value ki ramge 0 to 255 hoti , chahe R ki ho ya Gvki ya B ki\n",
         "# isme , hum /255 kr dete taki ye bdi bdi values hmari 0 se 1 aa jaye\n",
-        "# kuki usse calculatiom fast hogi and tyime km lagega vs\n",
+        "# kuki usse calculatiom fast hogi and time km lagega vs\n",
         "# 81 * 324 = ye krna okha lgta thoda time leta computer mae agar computerbke hisab se chle\n",
-        "#0.81 * 0.324 = ye krna conputer ke loye bhtt aasan hoga bhtt fas th nkjri  dhnjii\n",
-        "#mext\n"
+        "#0.81 * 0.324 = ye krna conputer ke loye bhtt aasan hoga bhtt fas th nkjri  d\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -994,7 +990,7 @@
         "model = Sequential()\n",
         "#ab main start hoga , ki jo hum CNN bna rhe ye actual mae dekh kesa rha hai\n",
         "#hmari jo image hai , leave ki uske sath kya krra ye algotihm\n",
-        "#ye dekhenge ab hum , as image visulization okayyyyyyyyyyyyyyyyyyyy!"
+        "#ye dekhenge ab hum , as image visulization "
       ],
       "execution_count": null,
       "outputs": []
@@ -1072,8 +1068,7 @@
         "outputId": "51fc8d79-dae1-4112-d12b-d58ba34a84cd"
       },
       "source": [
-        "model.summary()\n",
-        "#nicheb kor"
+        "model.summary()\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -1161,11 +1156,9 @@
         "outputId": "055d5367-e194-47cf-f5a2-09a4a64fdd34"
       },
       "source": [
-        " #yha se , ye bs hun , layers ke name dekh rhe hau ki hmare layers mae kya kya pda gai ,\n",
+        "\n",
         " #jo conv vala layer hai ( ye layer vo hota jisse hum image ko kernel ke sath multiplybkrte hai\n",
-        " # kernel pta hai na ? filters mtlb ?? pta hai na ?hnji hnj\n",
-        " # to ispr itna dhyan dene ki jaorrt ni , main aage hai,  ye to bs mne aone conviction\n",
-        " #ke liye likha tha , jb mae ye code likhra tha.okokkkkkkk\n",
+        "\n",
         "for layer in model.layers:\n",
         "    # check fobsr convolutional layer\n",
         "    if 'conv' not in layer.name:\n",
@@ -1203,15 +1196,12 @@
       },
       "source": [
         "#print(model.layers[0].get_weights())\n",
-        "#ye filters mtlb kernels , jo abhi Dekhen ja rha hu aapko , \n",
-        "#\n",
-        "#isse avgi erorr aa jata\n",
-        "# aapone fikter dekhe\n",
-        " # habnhijj aap 1st wor ka 1st filter\n",
-        " #mind mae rkho , ki kesa dikhtabhai , thodi der kenliye , onoly 1st row ka 1st element\n",
-        " # simran dekhana inh\n",
+        "#ye filters mtlb kernels \n",
         "\n",
-        "###\n",
+        "# aapone fikter dekhe\n",
+        " # aap 1st wor ka 1st filter\n",
+        " #mind mae rkho , ki kesa dikhtabhai , thodi der kenliye , onoly 1st row ka 1st element\n",
+        "\n",
         "# retrieve weights from the second hidden layer\n",
         "ConvLayerIndex = [0,5,8,13,16]\n",
         "from matplotlib import pyplot\n",
@@ -1250,10 +1240,9 @@
         "  # ye filter change tb honge jb error pta chla hme , fr vha se reverse back hoga error , or in filters ko update kr dega\n",
         "  #inki values ko change kr dega taki error ku aaye filter acha bne , ek bari ye image dekhko starting ki , dhyan mae rkhna kesi hai\n",
         "  # fr model = Sequantial() se dibara run kro 1 /1 aapko dekha ye randon numbers  hai  ye ese update hota rhega \n",
-        "  # error aane pr finally jberror bhtt kum hojayega tk ye filter best filter mana jayega\n",
+        "  # error aane pr finally jb error bhtt kum hojayega tk ye filter best filter mana jayega\n",
         "  #or ye sb bs numbers hai 0 to 1 \n",
         "\n",
-        "  #hahah , yaar ek dum ese mt ghumaya kro , code ke andar change hogya to errors pr erors aayenge\n",
         "  #dekho , ye jo filters hai na , ye 3 channels ke liye hai\n",
         "  #aapne upar dekh na model.summary() se pehle\n",
         "  #hmne likha tha sb 1st line thi jisme\n",
@@ -1263,21 +1252,20 @@
         "  #hum color ke husab se dekh rhe hai , ho ye rha hai \n",
         "  #ki random number generate hora , jisse ek 3 x 3 ki matrix bn rhi hai\n",
         "  # 1 row R G B ko drsha rha hai\n",
-        "  # itna smj aaya ?\n",
+        "  \n",
         "  #mtlb , 1st row ka jo 1st vala filter hai\n",
         "  # vo picture ke Red channel se multiply hoga\n",
         "  # jo 1st row 2nd filter hai , vo green channel se multiply hoga usi image ke\n",
-        "  #3rd vala blue se , fr insbko add krke , inme ek bias add kiya jayega\n",
+        "  #3rd vala blue se  fr insbko add krke , inme ek bias add kiya jayega\n",
         "  #bias b ek random number hota , usse jo final result aayega vo 1st filter se bni hui\n",
-        "  #image hogi , abhi dekheta aapko kesi dekgei \n",
+        "  #image hogi \n",
         "  #aapko abhi ye dekhata , ki ye srf random number hote hai , abhi aap sbne mind mae rkhliya na konsa color kha hai ?\n",
-        "  # onky vo jispr mera cursor ja rha hai , 1st row 1st filter Red vala ok# colors dekho yaad ho ye ?kknsa kha pr hai\n",
-        "  # ? \n",
-        "  # ??hnjiii\n",
-        "  # busy ho kya sb ?nhnih niihiiii nhiii bs smjhne ki koshish krre the\n",
-        "  # mae bs ye ke ra hu ,ki konsa color kha hai , 1st row ke 1st elemt ka\n",
-        "# ise temperoary dyan mae rkho , abhi dekhata ye random generated hote hhnnn ji \n",
-        "# ab dekho kya higa , niche krna simmi isse niche vala code chlao"
+        "  #  1st row 1st filter Red vala ok# colors dekho yaad ho\n",
+        "\n",
+        "  \n",
+        "  \n",
+        "  #  konsa color kha hai , 1st row ke 1st elemt ka\n",
+        "# ise temperoary dyan mae rkho , abhi  ye random generated hote "
       ],
       "execution_count": null,
       "outputs": [
@@ -1402,8 +1390,8 @@
         "plt.show()\n",
         "print(img_tensor.shape)\n",
         "\n",
-        "##ye ek image utai test mae se random , change krni dobara kr skte ho \n",
-        "#isko hum CONV2d ka jo 1st line thi na usme dalenge , dekhan kesi ho jayegi image\n",
+        "##ye ek image utai test mae se random \n",
+        "#isko hum CONV2d ka jo 1st line thi na usme dalenge \n",
         "\n",
         "#ye image conv0 ki 1st row se muliply hogi ,  RGB 3no chanels ke filter alag hai , vo 1 hi filter hai 1st row mae\n",
         "#total 32 filters hai . ,\n",
@@ -1411,8 +1399,8 @@
         "##pehle 1 hi filter ka dekho kesa dekhega , image ko change krna to same cell run krdo dobara ... to isme ye random image uthara h z banjj ,uoar code dekho , vhi same haj\n",
         "\n",
         "#ye koo random image utahi fike mae se \n",
-        "#ab kya kra hmne , iske 3 channels honge RGB Jisme G jayeda gai hna ? okkk\n",
-        "#ab jo mne aapko fikter dekhaya , uski 1st row se is image ko multiply krnege okau..? ek bari fr se filter dekho 1st row ke"
+        "#ab kya kra hmne , iske 3 channels honge RGB Jisme G jayeda gai hna\n",
+        "#ab jo  fikter dekhaya , uski 1st row se is image ko multiply krnege ek bari fr se filter dekho 1st row ke"
       ],
       "execution_count": null,
       "outputs": []
@@ -1457,15 +1445,13 @@
         "first_layer_activation = activations[0]\n",
         "print(first_layer_activation.shape)\n",
         "plt.matshow(first_layer_activation[0, :, :, 4], cmap='viridis')\n",
-        "#ye jo ymare  name change kr ra , jet , virigis , ye color map hai , mtlb kis gradient colors mae aapko dekhayega\n",
-        "#fikters hmne jet form mae dekhe z mtlb smjlo color combination hai \n",
-        "#ye ki low number se lekr high number 0 to 1 mae , colors kese light se dark homge ya dark se light okay ?okaaayyyy\n",
-        "#ye 1st conv2d mae gyinimage hmari , R ke alag se filter mila , G ka alag multiply hua and B ka alag , then unko conbine kr diya yebimage bn Gyi , ye 1 filter use kra sirf , aage dekhna saee 32 filter kese use honge\n",
-        "#abhi kya kri ek bari fr se upar se image change kdo , dekhA kya hua filter se , vo srf 2 akshar 32 , likhne se kya hua\n",
+        "#ye jo   name change kr ra , jet , viridis , ye color map hai , mtlb kis gradient colors mae  dekhayega\n",
+        "#filters hmne jet form mae dekhe z mtlb smjlo color combination hai \n",
+        "#ye ki low number se lekr high number 0 to 1 mae , colors kese light se dark homge ya dark se light \n",
+        "#ye 1st conv2d mae gyi image hmari , R ke alag se filter mila , G ka alag multiply hua and B ka alag , then unko conbine kr diya yebimage bn Gyi , ye 1 filter use kra sirf , aage dekhna saee 32 filter kese use honge\n",
+        "#abhi  ek bari fr se upar se image change kdo ,ab vo srf 2 akshar 32 , likhne se kya hua\n",
         "\n",
-        "# ye dekho , jb jmne 1st filter ke sath muliply kia to image kesi hk gyiviri#gi\n",
-        "\n",
-        "#ye sare jo name aaye ye sb color combination hai, mae spelling bhul gya o nkikche dekhna kya hai"
+        "# ye dekho , jb jmne 1st filter ke sath muliply kia to image kesi ho gyi\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -1478,8 +1464,8 @@
         "colab": {}
       },
       "source": [
-        "#yha rk smj aaya hua kya ? pleh yne btao aaagyaaaaaa\n",
-        "# ab dekhata ye kernel multiply hua kese jo aapko image dekhk , uske jpar kernel ko multiply kese kra"
+        "\n",
+        "# ab  ye kernel multiply hua kese jo aapko image dekhk , uske jpar kernel ko multiply kese kra"
       ],
       "execution_count": null,
       "outputs": []
@@ -1555,10 +1541,10 @@
         "   \n",
         "  \n",
         "   #sare 32 kernel kk hmne is singke image ke sath multiply kra , different different images bngyi isse\n",
-        "   # in images mae kuch negative calue b hogi kuch positive hna ? hnhnhnnn\n",
-        "   # koi doubt abui tk ?niii sbka nhi ?hnjiii negative kese\n",
-        "   ##negative mtlb dekahta\n",
-        "   #ye abhi hmne image 1st layer conv1 mae dali okay \n",
+        "   # in images mae kuch negative calue b hogi kuch positive \n",
+        "  \n",
+        "   ##negative mtlb \n",
+        "   #ye abhi hmne image 1st layer conv1 mae dali \n",
         "   #ab hum activation function lga rhe hai , relu jo negative values ko 0 kr dega\n",
         "   #and positive same rhegi   \n",
         "    8\n",
@@ -1608,11 +1594,7 @@
         "print(first_layer_activation.shape)\n",
         "plt.matshow(first_layer_activation[0, :, :, 7], cmap='viridis')\n",
         "#ye aapko droupout vale neuron mae dkegay kesa hota droupout vala neuron z bhtt kum activate hkta bhtt mum z activate to \n",
-        "#hota hai , pr namatra jitni value.\n",
-        "#smjlo , ek bnde ke brain mae vo apni wife ka name bhul gya z or uski wofe ka baam is neuron mae tha use bs darling word yaad hai\n",
-        "#aaya smj ?hnn\n",
-        "\n",
-        "#eSe alag alag krke dekho ge na nhnvers ko kuch na kjuch alag mil hi jayega dekhne ko"
+        "#hota hai , pr namatra jitni value"
       ],
       "execution_count": null,
       "outputs": []
