--- a/FinalProjectFile.ipynb
+++ b/FinalProjectFile.ipynb
@@ -40,15 +40,15 @@
         "\n",
         "**<h2> Team Members </h2>**\n",
         "\n",
-        "> Name 1\n",
+        "> Name 1      Sana Gupta\n",
         "\n",
-        "> Name 2      DRISHTI DHANDA\n",
+        "> Name 2      Drishti Dhanda\n",
         "\n",
-        "> Name 3\n",
+        "> Name 3      Simran Dhiman \n",
         "\n",
-        "> Name 4\n",
+        "> Name 4      Sheetal \n",
         "\n",
-        "> Name 5\n",
+        "> Name 5      Ojaswini Bhandari \n",
         "\n",
         "\n"
       ]
@@ -91,7 +91,7 @@
       "source": [
         "!wget https://data.mendeley.com/datasets/tywbtsjrjv/1/files/b4e3a32f-c0bd-4060-81e9-6144231f2520/Plant_leaf_diseases_dataset_with_augmentation.zip?dl=1"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +139,7 @@
         "with zipfile.ZipFile('/content/Plant_leaf_diseases_dataset_with_augmentation.zip?dl=1', 'r') as zip_ref:\n",
         "    zip_ref.extractall('/content/')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
         "import pickle\n",
         "import cv2"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
         "BS = 64\n",
         "directory_root = '/content/Plant_leave_diseases_dataset_with_augmentation'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
         "import seaborn as sns\n",
         "sns.set()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
         "plt.title(\"Number Of Images in every folder\")\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
