completed with problem

--- a/FinalProjectFile.ipynb
+++ b/FinalProjectFile.ipynb
@@ -39,15 +39,15 @@
         "\n",
         "**<h2> Team Members </h2>**\n",
         "\n",
-        "> Name 1      Sana Gupta\n",
+        ">      Sana Gupta\n",
         "\n",
-        "> Name 2      Drishti Dhanda\n",
+        ">      Drishti Dhanda\n",
         "\n",
-        "> Name 3      Simran Dhiman \n",
+        ">      Simran Dhiman \n",
         "\n",
-        "> Name 4      Sheetal \n",
+        ">      Sheetal \n",
         "\n",
-        "> Name 5      Ojaswini Bhandari \n",
+        ">      Ojaswini Bhandari \n",
         "\n",
         "\n"
       ]
