--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -45,22 +45,23 @@
       },
       "source": [
         "**<h1> Project : </h1>**\n",
-        " \n",
+        " **Leaf Disease detection with CNN algorithm using keras**\n",
         "**<h2> Description:</h2>**\n",
+        "In this we have three basic steps: Image Pre-processing and analysis, Feature Extraction and Recognition of plant disease. The aim is to detect the symptoms of the disease occurred in leaves in an accurate way. Once the captured image is pre-processed, the various properties of the plant leaf such as intensity, color and size are extracted and sent to SVM classifier with Back propagation Neural Network for classification.\n",
         " \n",
         "**<h3> Research Papers :</h3>** - <a href=\"google.com\">Click Here</a>\n",
         " \n",
         "**<h2> Team Members </h2>**\n",
         " \n",
-        "> Name 1\n",
+        "> Drishti Dhanda\n",
         " \n",
-        "> Name 2\n",
+        "> Sana Gupta\n",
         " \n",
-        "> Name 3\n",
+        "> Simran Dhiman\n",
         " \n",
-        "> Name 4\n",
+        "> Sheetal\n",
         " \n",
-        "> Name 5"
+        "> Ojaswini Bhandari"
       ]
     },
     {
